support branch filters frontend

--- a/client/src/components/suppliers/Suppliers.scss
+++ b/client/src/components/suppliers/Suppliers.scss
@@ -1,4 +1,7 @@
 tr.suppliers-table {
+  td:not([class^="cell-id"]) {
+    text-align: center;
+  }
   td {
     text-align: center;
     width: 10%;
